BusOne/src/objects/Network_Mapping_vod__c.object
<CustomObject>
    <description>CRM-Network mapping header.</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True for Active mappings.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <description>ISO 3166-1 alpha-2 country code</description>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Mapping Description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID for use in data loading and migration.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Used_Datetime_vod__c</fullName>
        <description>Datetime when mapping has been last used</description>
        <label>Last Used Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unique_Key_vod__c</fullName>
        <description>Unique key preventing duplicate active Network mappings. Only set for record where Active = True. Should be cleared for records where Active becomes False. Contains Country field value.</description>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Validation_Notes_vod__c</fullName>
        <description>Validation status description if Validation Status is &quot;Invalid&quot;</description>
        <label>Validation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status_vod__c</fullName>
        <description>Mapping validation status</description>
        <inlineHelpText>Mapping validation status</inlineHelpText>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unvalidated_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Valid_vod</fullName>
                </value>
                <value>
                    <fullName>Invalid_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Network Mapping</label>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Network Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>